# eosio.system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  docs.json  pipeline.jsonc
.cicd/: build.sh  test.sh
.cicd/helpers/: general.sh
contracts/: CMakeLists.txt
contracts/eosio.distribute/: CMakeLists.txt
contracts/eosio.system/: CMakeLists.txt
contracts/eosio.system/include/eosio.system/: constants.hpp  eosio.system.hpp  staking_pool.hpp  stream_extensions.hpp  time_constants.hpp  vote_pool.hpp
contracts/eosio.system/src/: delegate_bandwidth.cpp  eosio.system.cpp  exchange_state.cpp  powerup.cpp  producer_pay.cpp  rentbw.cpp  rex.cpp  staking_pool.cpp  vote_pool.cpp  voting.cpp
docs/: 03_build-and-deploy.md
docs/01_key-concepts/: 05_stake.md
docs/04_guides/: 06_staking-pools.md  08_staking-pools.md  08_voter-pools.md
scripts/: build.sh
terraform/: main.tf  pipelines.tf  ssm.tf  storage.tf
tests/: CMakeLists.txt  contracts.hpp.in  eosio.distribute_tests.cpp  eosio.powerup_tests.cpp  eosio.rentbw_tests.cpp  eosio.staking_pool_tests.cpp  eosio.system_tester.hpp  eosio.system_tests.cpp  eosio.votepool_tests.cpp
